Use Java 17 to run Android Setup (#378)
+ Java 19 compile and runtime compatibility.